--- a/Presentation.Rmd
+++ b/Presentation.Rmd
@@ -7,9 +7,9 @@ author: "Julia Wilkins & Adrian Naranjo"
 
 # Data
 
-Found on Kaggle: https://www.kaggle.com/noahgift/social-power-nba
-
-Contains combined performance data for players in the 2016-2017 season, and salary, Twitter engagement, and Wikipedia traffic data. 
+* Social Power NBA Dataset
+* Found on Kaggle: https://www.kaggle.com/noahgift/social-power-nba
+* Contains combined performance data for players in the 2016-2017 season, and salary, Twitter engagement, and Wikipedia traffic data. 
 
 <br>
 
@@ -22,7 +22,160 @@ Contains combined performance data for players in the 2016-2017 season, and sala
 
 <br>
 
+# Exploratory Data Analysis
+
 ```{r, message=FALSE}
+# Load Packages
+library(tidyverse)
+library(modelr)
+library(boot)
+library(leaps)
+library(gridExtra)
+library(gam)
+```
+
+```{r, message=FALSE, echo=FALSE, warning=FALSE}
+# load some data for EDA
+
+team_valuations <- read_csv('raw_data/nba_2017_team_valuations.csv') # Team vs. valuations
+
+att_val_elo <- read_csv('raw_data/nba_2017_att_val_elo.csv') # Attendance, valuation, and ELO
+
+salary <- read_csv('raw_data/nba_2017_salary.csv') %>% # 449 x 5
+  mutate(SALARY2 = (SALARY / 1000000)) 
+
+
+players_with_stats_combined <- read_csv('raw_data/nba_2017_players_stats_combined.csv') # 446 x 38 (PS)
+
+players_with_salary_wiki_twitter <- read_csv('raw_data/nba_2017_players_with_salary_wiki_twitter.csv') # 239 x 42 (PS)
+# Aggregates social media statistics at a team level
+# Removes players which played for more than one team
+team_twitter_wiki <- drop_na(players_with_salary_wiki_twitter) %>%
+  group_by(TEAM) %>%
+  summarise(total_pageviews = sum(PAGEVIEWS)
+            ,total_twitter_favorite = sum(TWITTER_FAVORITE_COUNT)
+            ,total_twitter_retweet = sum(TWITTER_RETWEET_COUNT)) %>%
+  filter(!str_detect(TEAM, '/'))
+
+
 
 ```
+
+<br>
+
+### Exploring Team Data
+
+<br>
+
+```{r, message=FALSE, echo=FALSE}
+# Simply visualizing the range of team values (combined salary)
+# Maybe take this one out?
+ggplot(team_valuations, aes(x = VALUE_MILLIONS
+                            ,y = TEAM
+                            ,size = VALUE_MILLIONS
+                            ,color = VALUE_MILLIONS)) +
+  geom_point() +
+  labs(x = 'Team Value', y = 'Team Name') +
+  ggtitle("Exploring Team Value")
+
+# Shows attendance and team value are correlated
+ggplot(att_val_elo, aes(x = VALUE_MILLIONS
+                        ,y = AVG
+                        ,size = VALUE_MILLIONS
+                        ,color = VALUE_MILLIONS)) + 
+  geom_smooth(color = 'brown') +
+  geom_point() +
+  labs(y = 'Attendance', x = 'Team Value') + 
+  ggtitle("Team Value vs. Attendance ")
+```
+
+<br>
+
+### Exploring Individual and Salary Data
+
+<br>
+
+```{r, message=FALSE, echo=FALSE}
+# Display histogram of salaries... not surprisingly, right skewed
+salary %>% 
+  ggplot(aes(SALARY2, labels = TRUE)) +
+  geom_histogram(binwidth = 2.5) +
+  stat_bin(geom="text", aes(label=..count..), binwidth = 2.5) +
+  labs(x = 'Salary in Millions', y = 'Number of Players') + 
+  ggtitle("Individual Salary Distribution")
+```
+<br>
+Quartiles of individual salaries:
+```{r, message=FALSE}
+# Find a quantiles
+quantile(salary$SALARY, seq(0, 1, .1))
+```
+<br>
+```{r, message=FALSE, echo=FALSE}
+
+# Display salaries by position 
+# Removed rows that only display a position a 'F' or 'G'
+salary %>% 
+  filter(POSITION %in% c('C', 'PF', 'PG', 'SF', 'SG')) %>% 
+  ggplot(aes(POSITION, SALARY)) +
+  geom_boxplot() +
+  labs(x = 'Salary', y = 'Posiiton') + 
+  ggtitle("Salary By Position")
+```
+<br>
+Average salary by position:
+```{r, message=FALSE, echo=FALSE}
+# Calculate average salary/position
+(avg_salary <- salary %>% 
+    filter(POSITION %in% c('C', 'PF', 'PG', 'SF', 'SG')) %>% 
+    group_by(POSITION) %>% 
+    summarise(avg_salary = median(SALARY) / 1000000))
+
+
+
+# Exploring salary vs. age
+players_with_stats_salary <- inner_join(players_with_stats_combined, salary
+                                        , by = c('PLAYER' =  'NAME'))
+players_with_stats_salary <- select(players_with_stats_salary, -POSITION.y, -TEAM.y, -SALARY2)
+
+players_with_stats_salary <- drop_na(players_with_stats_salary)
+
+# Correlation between Age and Salary. Took out outliers.
+players_with_stats_salary %>% 
+  filter(AGE >= 20, AGE <= 35) %>% 
+  ggplot(aes(x = AGE, y = SALARY)) +
+  geom_point() +
+  geom_smooth() + ggtitle("Age vs. Individual Salary")
+
+```
+<br><br>
+```{r, message=FALSE, echo=FALSE}
+# Correlation between between Player Effectiveness and Salary
+ggplot(players_with_stats_salary, aes(x = PIE, y = SALARY)) +
+  geom_point() +
+  geom_smooth() + 
+  ggtitle("Player Effectiveness vs. Salary")
+
+```
+
+<br>
+
+### Social Media Stats by Team
+```{r, message=FALSE, echo=FALSE}
+team_social_media <- ggplot(team_twitter_wiki) + 
+  geom_point(aes(total_pageviews, TEAM), color = 'red') +
+  geom_point(aes(total_twitter_favorite, TEAM), color = 'blue') +
+  geom_point(aes(total_twitter_retweet, TEAM), color = 'black') +
+  labs(x = 'Social Media Statistics', y = 'Team') + 
+  ggtitle("Social Media Stats per Team\n\n Red = WikiPageviews, Black = Twitter Retweets, Blue = Twitter Favorites")
+
+team_social_media
+```
+
+
+<br>
+<br>
+
+# Main focus question: Can we predict salary from performance statistics? 
+
 <br>
